--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ criterion = { version = "0.3", features=["html_reports"] }
 rand = "0.8"
 
 [[bench]]
-name = "encode"
+name = "bench"
 harness = false
